--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ buildFuture = true
 copyright = "&copy;{year}, All Rights Reserved"
 timeout = 10000
 enableEmoji = true
-paginate = 13
+paginate = 7
 rssLimit = 100
 
 enableGitInfo = false
@@ -51,6 +51,6 @@ googleAnalytics = ""
     notAlternative = true
 
 [taxonomies]
-  category = "categories"
-  tag = "tags"
-  series = "series"
+  category = "flokkar"
+  tag = "tög"
+  series = "seríur"
